# EchoType

./: .gitignore  AGENTS.md  FIXES_SUMMARY.md  README.en.md  README.md  RELEASE_NOTES_v0.2.1.md  REVIEW_REPORT_v0.2.1.md
.agent/reports/: scan_history.json
CoreKit/: Package.resolved  Package.swift
CoreKit/Sources/CoreKit/AI/: PolisherProtocol.swift
CoreKit/Sources/CoreKit/ASR/: ASREngineProtocol.swift  ModelDownloader.swift  QwenEngine.swift  WhisperEngine.swift
CoreKit/Sources/CoreKit/Audio/: AudioManager.swift
CoreKit/Sources/CoreKit/Context/: ContextReaderProtocol.swift  MacOSContextReader.swift
CoreKit/Sources/CoreKit/Database/: HistoryStore.swift  SettingsStore.swift
CoreKit/Sources/CoreKit/Input/: MacOSTextInjector.swift
CoreKit/Sources/CoreKit/Permissions/: PermissionManager.swift
CoreKit/Tests/CoreKitTests/: CoreKitTests.swift
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: generate_icns.sh  icon.icns  remove_bg.py
desktop/src-tauri/src/: bridge.rs  commands.rs  keyboard.rs  lib.rs  logger.rs  main.rs  permissions.rs  tray.rs
desktop/src/components/: FloatingBar.css  FloatingBar.tsx  Hub.css  Hub.tsx  Onboarding.tsx  Settings.tsx
desktop/src/lib/: hotkey-config.ts  permissions.ts  settings.ts
docs/: research-01-typeless-reverse-engineering.txt  research-02-keyboard-events-hotkey.txt  research-03-macos-permissions.txt  research-04-frontend-opensource.txt  v0.3.0-architecture.md
helper/: Package.resolved  Package.swift
helper/Sources/EchoTypeHelper/: main.swift
scripts/: build_release.sh  generate_icons.py
